--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+
     implementation 'javax.inject:javax.inject:1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -48,16 +49,17 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc01'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-rc01'
-
+    def paging_version = "3.1.1"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    // RxJava3 support for paging library
+    implementation "androidx.paging:paging-rxjava3:$paging_version"
     //noinspection LifecycleAnnotationProcessorWithJava8
-
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+//    implementation "io.reactivex.rxjava2:rxjava:2.1.14"
     implementation ('com.shopify.mobilebuysdk:buy3:12.0.0'){
         exclude group: "com.shopify.graphql.support"
     }
-    def paging_version = "3.0.0-beta02"
 
-    //paging 3
-    implementation "androidx.paging:paging-runtime:$paging_version"
     // for adding cardview
     implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.+'
